# UnderFlaw

./: .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  README.md  VERIFICATION.md  debug_nnue_play.py  generate_training_data_sparse.py  generate_training_data_v2.py  reconstruct_fen.py  train_nnue_local.py
.github/workflows/: generate_data.yml
Games/: UnderFlaw.pgn
assets/: PARAMETERS.md  tuned_params.txt
docs/: CHECKLIST.md  COMPLETE_SUMMARY.md  FINAL_REPORT.md  IMPLEMENTATION_REPORT.md  IMPROVEMENTS.md  IMPROVEMENTS_IMPLEMENTED.md  INDEX.md  PHASE2_COMPLETE.md  QUICK_REFERENCE.md  README.md  REFINEMENTS_V2.md  SUMMARY.md
include/: bitboard.h  book.h  cache.h  evaluation.h  magic.h  movegen.h  movepicker.h  nnue.h  perft.h  position.h  search.h  see.h  tablebase.h  threads.h  tt.h  tuner.h  types.h  uci.h
src/: book.c  cache.c  evaluation.c  magic.c  main.c  movegen.c  movegen_helper.c  movepicker.c  nnue.c  perft.c  position.c  search.c  see.c  tablebase.c  threads.c  tt.c  tuner.c  uci.c
tests/: perft_suite.epd  repro_engine.py  repro_illegal.c  repro_movegen.c  self_play.py  tactics.epd  test_positions.epd  test_rules.py  test_tactics.py  test_tb_uci.py
training/: train.py
utils/: embed_net.py
